# socialgal.py

./: README.md  pyproject.toml
socialgal/: __init__.py
socialgal/client/: client.py
socialgal/types/: __init__.py  post.py  user.py
