[project]
name = "socialgal.py"
version = "1.0.0"
description = "An async API wrapper for SocialGal written in Python."
authors = [
    {name = "vcokltfre", email = "vcokltfre@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
