[project]
name = "socialgal"
version = "1.0.0"
description = "An async API wrapper for SocialGal written in Python."
authors = [
    {name = "vcokltfre", email = "vcokltfre@gmail.com"},
]
dependencies = [
    "httpx>=0.25.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.pdm.scripts]
format = {shell = "python -m black . && python -m isort ."}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
